Added a silly comment

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <input type="checkbox" name="characters" id="charactersElement" />
         </div>
       </div>
-
+      <!-- Silly comment no use -->
       <div class="messageSection">
         <p class="msg hide" id="msg"></p>
       </div>
